Modifiche richieste ticket #10927
- provider B: permettere posticipo data (non si può anticipare, ma
possono spostarla più avanti come gruppo A).
- Modifica docenti: renderla possibile con data inizio compresa.
- Ordinamento alfabetico per docenti/responsabili quando seleziono
l'anagrafica tramite lentina (rendere ordinabili le colonne)
- Correggere "dissuasione" in metodologie didattiche con discussione
- FSC: campo 18 ampliare grandezza text box visualizzato
- Elenco discipline in ordine alfabetico per medico chirurgo

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1460,3 +1460,10 @@ li.listStyle-elenco > label{
 .big-icon {
 	font-size: 25px;
 }
+
+/* fix all'ordering delle datatables scrollable */
+.dataTables_scrollBody thead {
+	visibility: hidden;
+}
+
+
