--- a/src/main/resources/templates/seduta/sedutaValidate.html
+++ b/src/main/resources/templates/seduta/sedutaValidate.html
@@ -232,7 +232,8 @@
 					DINIEGO: [[#{label.diniego}]],
 					RICHIESTA_INTEGRAZIONE: [[#{label.richiesta_integrazione}]],
 					RICHIESTA_PREAVVISO_RIGETTO: [[#{label.richiesta_preavviso_di_rigetto}]],
-					INS_ODG: [[#{label.ins_odg}]]
+					INS_ODG: [[#{label.ins_odg}]],
+					CONCLUSO: [[#{label.concluso}]]
 				};
 
 			/*]]>*/
